<resources>
    <string name="app_name">Composition</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="name_of_game">Состав числа</string>
    <string name="text_button_understand">Понятно</string>
    <string name="text_choose_lvl">Выберите уровень:</string>
    <string name="text_test_lvl">Тестовый</string>
    <string name="text_easy_lvl">Легкий</string>
    <string name="text_normal_lvl">Средний</string>
    <string name="text_hard_lvl">Тяжелый</string>
    <string name="question_mark">\?</string>
    <string name="counter_right_answers_text">Правильных ответов %s (минимум %s)</string>
    <string name="text_count_of_needs_answers">Необходимое количество правильных ответов: %s</string>
    <string name="text_your_score">Ваш счет:\n%s</string>
    <string name="text_need_percent">Необходимый процент правильных ответов: %s</string>
    <string name="test_percent_of_right_answers">Процент правильных ответов:\n%s</string>
    <string name="text_on_btn_retry">Попробовать снова</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
</resources>