<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_dark"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/tvChooseLvl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_choose_lvl"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonTestLvl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_gradient_background"
            android:backgroundTint="@color/purple_500"
            android:text="@string/text_test_lvl"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseLvl" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEasyLvl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_gradient_background"
            android:backgroundTint="@color/green"
            android:text="@string/text_easy_lvl"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTestLvl" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNormalLvl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_gradient_background"
            android:backgroundTint="@color/yellow"
            android:text="@string/text_normal_lvl"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEasyLvl" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonHardLvl"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_gradient_background"
            android:backgroundTint="@color/red"
            android:text="@string/text_hard_lvl"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNormalLvl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>